Fixed spelling and filename error

--- a/_includes/home-module.html
+++ b/_includes/home-module.html
@@ -15,7 +15,7 @@
 				<img src="/img/yangonese.jpg" alt="" class="fll">
 				<div class="fll">
 					<span class="big-text">Yangonese!</span>
-					Freelance Write &amp; Front-end Developer <br>
+					Freelance Writer &amp; Front-end Developer <br>
 					contact@yangonese.com <br>
 					www.yangonese.com
 				</div>
