--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
 		<div class="grid">
 			<div class="col-1-3">
 				<div class="sharing">
-					<a href="/">Social link</a>
+					<a href="/"></a>
 				</div>
 			</div>
 			<!-- /.col-1-2 -->
