Added some links

--- a/_includes/home-module.html
+++ b/_includes/home-module.html
@@ -3,7 +3,7 @@
 		<div class="about-event">
 			<h2>What is Barcamp?</h2>
 			<p><strong>Barcamp</strong> is an international network of user generated conferences primarily focused around technology and the web. They are open, participatory workshop-events, the content of which is provided by participants.</p>
-			<a href="#">Read More</a>
+			<a href="http://en.wikipedia.org/wiki/BarCamp">Read More</a>
 		</div>
 		<!-- /.about-event -->
 	</div>
