--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
 		<div class="grid">
 			<div class="col-1-3">
 				<div class="sharing">
-					<a href="/"></a>
+					<a href="http://barcampmyanmar.github.io/">http://barcampmyanmar.github.io/</a>
 				</div>
 			</div>
 			<!-- /.col-1-2 -->
@@ -13,7 +13,9 @@
 			</div>
 			<!-- /.col-1-2 -->
 			<div class="col-1-3">
-				Made in MM.
+				<div class="flr">
+					Made in MM.
+				</div>
 			</div>
 			<!-- /.col-1-3 -->
 		</div>
