--- a/_includes/show.html
+++ b/_includes/show.html
@@ -1,7 +1,7 @@
 <div id="show">
 	<div class="wrapper">
 		<div class="big-text">Something is happened.</div>
-		<div class="caller"><a href="#">Call Action</a><a href="#">Call Action</a></div>
+		<div class="caller"><a href="/barcamp/">Check it!</a></div>
 	</div>
 </div>			
 <!-- /#show -->
